--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,6 +8,7 @@
   <ion-content>
     <ion-list>
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+        <i class="fa {{p.icon}}" style="padding-right: 3px;"></i>
         {{p.title}}
       </button>
     </ion-list>
