--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -35,12 +35,16 @@ $app-direction: ltr;
 
 $colors: (
   primary:    #488aff,
-  secondary:  #32db64,
-  danger:     #f53d3d,
+  secondary:  #0b9c22,
+  danger:     #d43636,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  color-primary-0: #29516D,
+  color-primary-1: #B0B4B7,
+  color-primary-2: #5F7B8E,
+  color-primary-3: #062F4C,
+  color-primary-4: #00192B
 );
-
 
 // App iOS Variables
 // --------------------------------------------------
