--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -32,3 +32,9 @@
 .scroll-content{ color: color($colors, color-primary-1); }
 
 .select-icon-inner { color: color($colors, color-primary-1); }
+.center { text-align: center; }
+.color-tweeter{ color: #1da1f2;}
+.pd-0 {padding: 0px;}
+.pd-10 {padding: 10px;}
+.pd-l-5 {padding-left: 5px;}
+.pd-l-10 {padding-left: 10px;}
